<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:orientation="vertical"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
 >
	<TableRow>
		<TextView
		 	android:layout_width="fill_parent"
		 	android:layout_height="wrap_content"
		 	android:text="@string/wordadd_jpword"
		 	android:textSize="10pt"
		 /> 
		<EditText
		    android:id="@+id/wordaddjpword"		    
		 	android:layout_width="fill_parent"
		 	android:layout_height="wrap_content"
		 	android:selectAllOnFocus="true"
		 	android:ems="10"
		 />
	</TableRow>
	<TableRow>
		<TextView
		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"
		 android:text="@string/wordadd_jpch"
		 android:textSize="10pt" 
		 /> 
		<EditText
		    android:id="@+id/wordaddjpch"	
		 	android:layout_width="fill_parent"
		 	android:layout_height="wrap_content"
		 />
	</TableRow>
	<TableRow>
		<TextView
		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"
		 android:text="@string/wordadd_chword"
		 android:textSize="10pt" 
		 /> 
		<EditText
		    android:id="@+id/wordaddchword"	
		 	android:layout_width="fill_parent"
		 	android:layout_height="wrap_content"
		 	android:selectAllOnFocus="true"
		 />
	</TableRow>
	<TableRow>
		<TextView
		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"
		 android:text="@string/wordadd_speech"
		 android:textSize="10pt" 
		 /> 
		<EditText
		    android:id="@+id/wordaddspeech"	
		 	android:layout_width="fill_parent"
		 	android:layout_height="wrap_content"
		 	android:selectAllOnFocus="true"
		 />
	</TableRow>
	<TableRow>
		<TextView
		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"
		 android:text="@string/wordadd_type"
		 android:textSize="10pt" 
		 /> 
		<Spinner android:id="@+id/wordaddtype"   
           android:layout_width="fill_parent"  
           android:layout_height="wrap_content"></Spinner>
	</TableRow>
	<TableRow>
		<TextView
		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"
		 android:text="@string/wordadd_date"
		 android:textSize="10pt" 
		 /> 
		<Spinner android:id="@+id/wordadddate"   
           android:layout_width="fill_parent"  
           android:layout_height="wrap_content"></Spinner>
	</TableRow>	
	<TableRow>
		<TextView
		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"
		 android:text="@string/wordadd_desc"
		 android:textSize="10pt" 
		 /> 
		<EditText
		    android:id="@+id/wordadddesc"	
		 	android:layout_width="fill_parent"
		 	android:layout_height="wrap_content"
		 	android:selectAllOnFocus="true"
		 />
	</TableRow>			
	<Button 
	    android:id="@+id/wordaddbtnadd"	
	 	android:layout_width="wrap_content"
	 	android:layout_height="wrap_content"
	 	android:text="@string/wordadd_btnadd"
	 />
</TableLayout>