<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/wordlearn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_wordlearn" />
    
    <Button 
        android:id="@+id/grouplearn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wordlearn"
        android:text="@string/word_grouplearn"/>
    <Button
        android:id="@+id/wordmanage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/grouplearn"
        android:text="@string/word_wordmanage" />
    
    <Button 
        android:id="@+id/typemanage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wordmanage"
        android:text="@string/word_typemanage"/>    

	<Button 
        android:id="@+id/btnback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/typemanage"
        android:text="@string/backtext"/>  
</RelativeLayout>
