<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/word"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_word" />
    
    <Button 
        android:id="@+id/sentence"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/word"
        android:text="@string/menu_sentence"/>
    
	<Button 
        android:id="@+id/datainit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sentence"
        android:text="@string/menu_datainit"/>
	<Button 
        android:id="@+id/outsystem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/datainit"
        android:text="@string/menu_outsystem"/>	
</RelativeLayout>
